feat - add user anthentication with email